--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
       <div class="content"></div>
       <div class="nav"></div>
       <div class="footer"></div>
+      <div class="header"></div>
+      <div class="content"></div>
+      <div class="nav"></div>
+      <div class="footer"></div>
+      <div class="header"></div>
+      <div class="content"></div>
+      <div class="nav"></div>
+      <div class="footer"></div>
+      <div class="header"></div>
+      <div class="content"></div>
+      <div class="nav"></div>
+      <div class="footer"></div>
     </div>
 
     </div>
