--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="script.js"></script>
   </head>
   <body>
-    <script src="script.js"></script>
+    Auto fill
     <div class="grid">
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
-      <div class="item">4</div>  
+      <div class="item">4</div> 
+      <div class="item">5</div>  
+    </div>
+    Auto fit
+    <div class="grid"> 
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
-      <div class="item">4</div>  
+      <div class="item">4</div> 
+      <div class="item">5</div>  
     </div>
   </body>
 </html>
