min/max-content

--- a/index.html
+++ b/index.html
@@ -8,21 +8,15 @@
     <script src="script.js"></script>
   </head>
   <body>
-    Auto fill
     <div class="grid">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div> 
-      <div class="item">5</div>  
-    </div>
-    Auto fit
-    <div class="grid"> 
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div> 
-      <div class="item">5</div>  
+      <div class="item">aaaaaaaaaaaaaaaaaaaaaa this is the real rap</div>
+      <div class="item">aaaaaaaaaaaaaaaaaaaaaa this is no fantasy</div>
+      <div class="item">aaaaaaaaaaaaaaaaaaaaaa open your eyes up</div>
+      <div class="item">aaaaaaaaaaaaaaaaaaaaaa escape from reality</div> 
+      <div class="item">aaaaaaaaaaaaaaaaaaaaaa open your eyes...</div>
+      <div class="item">aaaaaaaaaaaaaaaaaaaaaa wake up and come see..</div>
+      <div class="item">aaaaaaaaaaaaaaaaaaaaaa any way winds blow</div>
+      <div class="item">aaaaaaaaaaaaaaaaaaaaaa nothing real matter to me..</div>  
     </div>
   </body>
 </html>
