--- a/scss/index.html
+++ b/scss/index.html
@@ -1,16 +1,15 @@
-<head>
+<html>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/css/styles.css" />
     <title>(S)CSS Masterclass</title>
   </head>
-  <body></body>
   <body>
-    <h2>Title</h2>
-    <div class="box">
-      <h2>Another Title</h2>
-      <button>Hello</button>
-    </div>
-    <button>Bye bye</button>
+		<a href="#">Google</a>
+		<a href="#">Google</a>
+		<a href="#">Google</a>
+		<a href="#">Google</a>
+		<a href="#">Google</a>
   </body>
 </html>
