--- a/scss/index.html
+++ b/scss/index.html
@@ -6,7 +6,6 @@
     <title>(S)CSS Masterclass</title>
   </head>
   <body>
-		<a href="#">Log In</a>
-		<button>Log Out</button>
+		<a>Hello</a>
   </body>
 </html>
